crates/ruff_linter/src/rules/ruff/snapshots/ruff_linter__rules__ruff__tests__preview__RUF076_RUF076.py.snap
---
source: crates/ruff_linter/src/rules/ruff/mod.rs
assertion_line: 824
---
RUF076 `Decimal()` called with a non-string argument
  --> RUF076.py:50:15
   |
49 | # Integer literals
50 | d20 = Decimal(1)  # RUF076
   |               ^
51 | d21 = Decimal(0)  # RUF076
52 | d22 = Decimal(0xAB)  # RUF076
   |

RUF076 `Decimal()` called with a non-string argument
  --> RUF076.py:51:15
   |
49 | # Integer literals
50 | d20 = Decimal(1)  # RUF076
51 | d21 = Decimal(0)  # RUF076
   |               ^
52 | d22 = Decimal(0xAB)  # RUF076
53 | d23 = decimal.Decimal(42)  # RUF076
   |

RUF076 `Decimal()` called with a non-string argument
  --> RUF076.py:52:15
   |
50 | d20 = Decimal(1)  # RUF076
51 | d21 = Decimal(0)  # RUF076
52 | d22 = Decimal(0xAB)  # RUF076
   |               ^^^^
53 | d23 = decimal.Decimal(42)  # RUF076
   |

RUF076 `Decimal()` called with a non-string argument
  --> RUF076.py:53:23
   |
51 | d21 = Decimal(0)  # RUF076
52 | d22 = Decimal(0xAB)  # RUF076
53 | d23 = decimal.Decimal(42)  # RUF076
   |                       ^^
54 |
55 | # Unary ops on integers
   |

RUF076 `Decimal()` called with a non-string argument
  --> RUF076.py:56:15
   |
55 | # Unary ops on integers
56 | d24 = Decimal(+1)  # RUF076
   |               ^^
57 | d25 = Decimal(-1)  # RUF076
   |

RUF076 `Decimal()` called with a non-string argument
  --> RUF076.py:57:15
   |
55 | # Unary ops on integers
56 | d24 = Decimal(+1)  # RUF076
57 | d25 = Decimal(-1)  # RUF076
   |               ^^
58 |
59 | # Boolean literals (subclass of int)
   |

RUF076 `Decimal()` called with a non-string argument
  --> RUF076.py:60:15
   |
59 | # Boolean literals (subclass of int)
60 | d26 = Decimal(True)  # RUF076
   |               ^^^^
61 | d27 = Decimal(False)  # RUF076
   |

RUF076 `Decimal()` called with a non-string argument
  --> RUF076.py:61:15
   |
59 | # Boolean literals (subclass of int)
60 | d26 = Decimal(True)  # RUF076
61 | d27 = Decimal(False)  # RUF076
   |               ^^^^^
62 |
63 | # Complex literals
   |

RUF076 `Decimal()` called with a non-string argument
  --> RUF076.py:64:15
   |
63 | # Complex literals
64 | d28 = Decimal(1j)  # RUF076
   |               ^^
65 |
66 | # Bytes literal
   |

RUF076 `Decimal()` called with a non-string argument
  --> RUF076.py:67:15
   |
66 | # Bytes literal
67 | d29 = Decimal(b"123")  # RUF076
   |               ^^^^^^
68 |
69 | # Variables with int annotation
   |

RUF076 `Decimal()` called with a non-string argument
  --> RUF076.py:71:15
   |
69 | # Variables with int annotation
70 | x: int = 42
71 | d30 = Decimal(x)  # RUF076
   |               ^
72 |
73 | # Variables with float annotation
   |

RUF076 `Decimal()` called with a non-string argument
  --> RUF076.py:75:15
   |
73 | # Variables with float annotation
74 | y: float = 3.14
75 | d31 = Decimal(y)  # RUF076
   |               ^
76 |
77 | # Keyword argument with non-string value
   |

RUF076 `Decimal()` called with a non-string argument
  --> RUF076.py:78:21
   |
77 | # Keyword argument with non-string value
78 | d32 = Decimal(value=1)  # RUF076
   |                     ^
79 | d33 = Decimal(value=0xFF)  # RUF076
   |

RUF076 `Decimal()` called with a non-string argument
  --> RUF076.py:79:21
   |
77 | # Keyword argument with non-string value
78 | d32 = Decimal(value=1)  # RUF076
79 | d33 = Decimal(value=0xFF)  # RUF076
   |                     ^^^^
80 |
81 | # Function parameter annotated as int
   |

RUF076 `Decimal()` called with a non-string argument
  --> RUF076.py:83:28
   |
81 | # Function parameter annotated as int
82 | def process_int(n: int):
83 |     return decimal.Decimal(n)  # RUF076
   |                            ^
84 |
85 | # Function parameter annotated as float
   |

RUF076 `Decimal()` called with a non-string argument
  --> RUF076.py:87:28
   |
85 | # Function parameter annotated as float
86 | def process_float(f: float):
87 |     return decimal.Decimal(f)  # RUF076
   |                            ^
88 |
89 | # ===== Edge cases =====
   |

RUF076 `Decimal()` called with a non-string argument
  --> RUF076.py:99:23
   |
98 | # Re-test with fully qualified after shadow
99 | d41 = decimal.Decimal(1)  # RUF076: still resolves to real decimal.Decimal
   |                       ^
   |
