crates/ruff_linter/src/rules/ruff/snapshots/ruff_linter__rules__ruff__tests__preview__RUF104_RUF104.py.snap
---
source: crates/ruff_linter/src/rules/ruff/mod.rs
snapshot_kind: text
---
RUF104.py:34:3: RUF104 [*] Unformatted special comment
   |
32 | # type: list[str]
33 | 
34 | # noqa:A123
   |   ^^^^ RUF104
35 | #noqa:   A123
36 | #    type:ignore
   |
   = help: Format comment

ℹ Safe fix
31 31 | # type: int
32 32 | # type: list[str]
33 33 | 
34    |-# noqa:A123
   34 |+# noqa: A123
35 35 | #noqa:   A123
36 36 | #    type:ignore
37 37 | #type:	int

RUF104.py:35:2: RUF104 [*] Unformatted special comment
   |
34 | # noqa:A123
35 | #noqa:   A123
   |  ^^^^ RUF104
36 | #    type:ignore
37 | #type:  int
   |
   = help: Format comment

ℹ Safe fix
32 32 | # type: list[str]
33 33 | 
34 34 | # noqa:A123
35    |-#noqa:   A123
   35 |+# noqa: A123
36 36 | #    type:ignore
37 37 | #type:	int
38 38 | # fmt:off

RUF104.py:36:6: RUF104 [*] Unformatted special comment
   |
34 | # noqa:A123
35 | #noqa:   A123
36 | #    type:ignore
   |      ^^^^ RUF104
37 | #type:  int
38 | # fmt:off
   |
   = help: Format comment

ℹ Safe fix
33 33 | 
34 34 | # noqa:A123
35 35 | #noqa:   A123
36    |-#    type:ignore
   36 |+# type: ignore
37 37 | #type:	int
38 38 | # fmt:off
39 39 | #fmt: on

RUF104.py:37:2: RUF104 [*] Unformatted special comment
   |
35 | #noqa:   A123
36 | #    type:ignore
37 | #type:  int
   |  ^^^^ RUF104
38 | # fmt:off
39 | #fmt: on
   |
   = help: Format comment

ℹ Safe fix
34 34 | # noqa:A123
35 35 | #noqa:   A123
36 36 | #    type:ignore
37    |-#type:	int
   37 |+# type: int
38 38 | # fmt:off
39 39 | #fmt: on
40 40 | # 	 fmt:	 skip

RUF104.py:38:3: RUF104 [*] Unformatted special comment
   |
36 | #    type:ignore
37 | #type:  int
38 | # fmt:off
   |   ^^^ RUF104
39 | #fmt: on
40 | #    fmt:    skip
   |
   = help: Format comment

ℹ Safe fix
35 35 | #noqa:   A123
36 36 | #    type:ignore
37 37 | #type:	int
38    |-# fmt:off
   38 |+# fmt: off
39 39 | #fmt: on
40 40 | # 	 fmt:	 skip
41 41 | # isort:skip

RUF104.py:39:2: RUF104 [*] Unformatted special comment
   |
37 | #type:  int
38 | # fmt:off
39 | #fmt: on
   |  ^^^ RUF104
40 | #    fmt:    skip
41 | # isort:skip
   |
   = help: Format comment

ℹ Safe fix
36 36 | #    type:ignore
37 37 | #type:	int
38 38 | # fmt:off
39    |-#fmt: on
   39 |+# fmt: on
40 40 | # 	 fmt:	 skip
41 41 | # isort:skip
42 42 | # isort:skip_file

RUF104.py:40:5: RUF104 [*] Unformatted special comment
   |
38 | # fmt:off
39 | #fmt: on
40 | #    fmt:    skip
   |      ^^^ RUF104
41 | # isort:skip
42 | # isort:skip_file
   |
   = help: Format comment

ℹ Safe fix
37 37 | #type:	int
38 38 | # fmt:off
39 39 | #fmt: on
40    |-# 	 fmt:	 skip
   40 |+# fmt: skip
41 41 | # isort:skip
42 42 | # isort:skip_file
43 43 | # ruff: isort:skip

RUF104.py:41:3: RUF104 [*] Unformatted special comment
   |
39 | #fmt: on
40 | #    fmt:    skip
41 | # isort:skip
   |   ^^^^^ RUF104
42 | # isort:skip_file
43 | # ruff: isort:skip
   |
   = help: Format comment

ℹ Safe fix
38 38 | # fmt:off
39 39 | #fmt: on
40 40 | # 	 fmt:	 skip
41    |-# isort:skip
   41 |+# isort: skip
42 42 | # isort:skip_file
43 43 | # ruff: isort:skip
44 44 | # ruff: isort:skip_file

RUF104.py:42:3: RUF104 [*] Unformatted special comment
   |
40 | #    fmt:    skip
41 | # isort:skip
42 | # isort:skip_file
   |   ^^^^^ RUF104
43 | # ruff: isort:skip
44 | # ruff: isort:skip_file
   |
   = help: Format comment

ℹ Safe fix
39 39 | #fmt: on
40 40 | # 	 fmt:	 skip
41 41 | # isort:skip
42    |-# isort:skip_file
   42 |+# isort: skip_file
43 43 | # ruff: isort:skip
44 44 | # ruff: isort:skip_file
45 45 | #    type:			ignore

RUF104.py:43:3: RUF104 [*] Unformatted special comment
   |
41 | # isort:skip
42 | # isort:skip_file
43 | # ruff: isort:skip
   |   ^^^^ RUF104
44 | # ruff: isort:skip_file
45 | #    type:          ignore
   |
   = help: Format comment

ℹ Safe fix
40 40 | # 	 fmt:	 skip
41 41 | # isort:skip
42 42 | # isort:skip_file
43    |-# ruff: isort:skip
   43 |+# ruff: isort: skip
44 44 | # ruff: isort:skip_file
45 45 | #    type:			ignore
46 46 | #	 	 	type:		 	int

RUF104.py:44:3: RUF104 [*] Unformatted special comment
   |
42 | # isort:skip_file
43 | # ruff: isort:skip
44 | # ruff: isort:skip_file
   |   ^^^^ RUF104
45 | #    type:          ignore
46 | #           type:           int
   |
   = help: Format comment

ℹ Safe fix
41 41 | # isort:skip
42 42 | # isort:skip_file
43 43 | # ruff: isort:skip
44    |-# ruff: isort:skip_file
   44 |+# ruff: isort: skip_file
45 45 | #    type:			ignore
46 46 | #	 	 	type:		 	int
47 47 | 

RUF104.py:45:6: RUF104 [*] Unformatted special comment
   |
43 | # ruff: isort:skip
44 | # ruff: isort:skip_file
45 | #    type:          ignore
   |      ^^^^ RUF104
46 | #           type:           int
   |
   = help: Format comment

ℹ Safe fix
42 42 | # isort:skip_file
43 43 | # ruff: isort:skip
44 44 | # ruff: isort:skip_file
45    |-#    type:			ignore
   45 |+# type: ignore
46 46 | #	 	 	type:		 	int
47 47 | 
48 48 | # NoQA: A123, B456

RUF104.py:46:7: RUF104 [*] Unformatted special comment
   |
44 | # ruff: isort:skip_file
45 | #    type:          ignore
46 | #           type:           int
   |             ^^^^ RUF104
47 | 
48 | # NoQA: A123, B456
   |
   = help: Format comment

ℹ Safe fix
43 43 | # ruff: isort:skip
44 44 | # ruff: isort:skip_file
45 45 | #    type:			ignore
46    |-#	 	 	type:		 	int
   46 |+# type: int
47 47 | 
48 48 | # NoQA: A123, B456
49 49 | # ruff: NoQA: A123, B456

RUF104.py:48:3: RUF104 [*] Unformatted special comment
   |
46 | #           type:           int
47 | 
48 | # NoQA: A123, B456
   |   ^^^^ RUF104
49 | # ruff: NoQA: A123, B456
50 | # flake8: NoQA: A123, B456
   |
   = help: Format comment

ℹ Safe fix
45 45 | #    type:			ignore
46 46 | #	 	 	type:		 	int
47 47 | 
48    |-# NoQA: A123, B456
   48 |+# noqa: A123, B456
49 49 | # ruff: NoQA: A123, B456
50 50 | # flake8: NoQA: A123, B456
51 51 | 

RUF104.py:49:3: RUF104 [*] Unformatted special comment
   |
48 | # NoQA: A123, B456
49 | # ruff: NoQA: A123, B456
   |   ^^^^ RUF104
50 | # flake8: NoQA: A123, B456
   |
   = help: Format comment

ℹ Safe fix
46 46 | #	 	 	type:		 	int
47 47 | 
48 48 | # NoQA: A123, B456
49    |-# ruff: NoQA: A123, B456
   49 |+# ruff: noqa: A123, B456
50 50 | # flake8: NoQA: A123, B456
51 51 | 
52 52 | # noqa: A123 B456

RUF104.py:50:3: RUF104 [*] Unformatted special comment
   |
48 | # NoQA: A123, B456
49 | # ruff: NoQA: A123, B456
50 | # flake8: NoQA: A123, B456
   |   ^^^^^^ RUF104
51 | 
52 | # noqa: A123 B456
   |
   = help: Format comment

ℹ Safe fix
47 47 | 
48 48 | # NoQA: A123, B456
49 49 | # ruff: NoQA: A123, B456
50    |-# flake8: NoQA: A123, B456
   50 |+# flake8: noqa: A123, B456
51 51 | 
52 52 | # noqa: A123 B456
53 53 | # ruff: noqa: A123 B456

RUF104.py:52:3: RUF104 [*] Unformatted special comment
   |
50 | # flake8: NoQA: A123, B456
51 | 
52 | # noqa: A123 B456
   |   ^^^^ RUF104
53 | # ruff: noqa: A123 B456
54 | # flake8: noqa: A123 B456
   |
   = help: Format comment

ℹ Safe fix
49 49 | # ruff: NoQA: A123, B456
50 50 | # flake8: NoQA: A123, B456
51 51 | 
52    |-# noqa: A123 B456
   52 |+# noqa: A123, B456
53 53 | # ruff: noqa: A123 B456
54 54 | # flake8: noqa: A123 B456
55 55 | # noqa: A123,B456

RUF104.py:53:3: RUF104 [*] Unformatted special comment
   |
52 | # noqa: A123 B456
53 | # ruff: noqa: A123 B456
   |   ^^^^ RUF104
54 | # flake8: noqa: A123 B456
55 | # noqa: A123,B456
   |
   = help: Format comment

ℹ Safe fix
50 50 | # flake8: NoQA: A123, B456
51 51 | 
52 52 | # noqa: A123 B456
53    |-# ruff: noqa: A123 B456
   53 |+# ruff: noqa: A123, B456
54 54 | # flake8: noqa: A123 B456
55 55 | # noqa: A123,B456
56 56 | # ruff: noqa: A123,B456

RUF104.py:54:3: RUF104 [*] Unformatted special comment
   |
52 | # noqa: A123 B456
53 | # ruff: noqa: A123 B456
54 | # flake8: noqa: A123 B456
   |   ^^^^^^ RUF104
55 | # noqa: A123,B456
56 | # ruff: noqa: A123,B456
   |
   = help: Format comment

ℹ Safe fix
51 51 | 
52 52 | # noqa: A123 B456
53 53 | # ruff: noqa: A123 B456
54    |-# flake8: noqa: A123 B456
   54 |+# flake8: noqa: A123, B456
55 55 | # noqa: A123,B456
56 56 | # ruff: noqa: A123,B456
57 57 | # flake8: noqa: A123,B456

RUF104.py:55:3: RUF104 [*] Unformatted special comment
   |
53 | # ruff: noqa: A123 B456
54 | # flake8: noqa: A123 B456
55 | # noqa: A123,B456
   |   ^^^^ RUF104
56 | # ruff: noqa: A123,B456
57 | # flake8: noqa: A123,B456
   |
   = help: Format comment

ℹ Safe fix
52 52 | # noqa: A123 B456
53 53 | # ruff: noqa: A123 B456
54 54 | # flake8: noqa: A123 B456
55    |-# noqa: A123,B456
   55 |+# noqa: A123, B456
56 56 | # ruff: noqa: A123,B456
57 57 | # flake8: noqa: A123,B456
58 58 | # noqa: A123,,B456

RUF104.py:56:3: RUF104 [*] Unformatted special comment
   |
54 | # flake8: noqa: A123 B456
55 | # noqa: A123,B456
56 | # ruff: noqa: A123,B456
   |   ^^^^ RUF104
57 | # flake8: noqa: A123,B456
58 | # noqa: A123,,B456
   |
   = help: Format comment

ℹ Safe fix
53 53 | # ruff: noqa: A123 B456
54 54 | # flake8: noqa: A123 B456
55 55 | # noqa: A123,B456
56    |-# ruff: noqa: A123,B456
   56 |+# ruff: noqa: A123, B456
57 57 | # flake8: noqa: A123,B456
58 58 | # noqa: A123,,B456
59 59 | # noqa: A123 , 	,	 	B456

RUF104.py:57:3: RUF104 [*] Unformatted special comment
   |
55 | # noqa: A123,B456
56 | # ruff: noqa: A123,B456
57 | # flake8: noqa: A123,B456
   |   ^^^^^^ RUF104
58 | # noqa: A123,,B456
59 | # noqa: A123 ,  ,       B456
   |
   = help: Format comment

ℹ Safe fix
54 54 | # flake8: noqa: A123 B456
55 55 | # noqa: A123,B456
56 56 | # ruff: noqa: A123,B456
57    |-# flake8: noqa: A123,B456
   57 |+# flake8: noqa: A123, B456
58 58 | # noqa: A123,,B456
59 59 | # noqa: A123 , 	,	 	B456
60 60 | # noqa: A123	B456

RUF104.py:58:3: RUF104 [*] Unformatted special comment
   |
56 | # ruff: noqa: A123,B456
57 | # flake8: noqa: A123,B456
58 | # noqa: A123,,B456
   |   ^^^^ RUF104
59 | # noqa: A123 ,  ,       B456
60 | # noqa: A123    B456
   |
   = help: Format comment

ℹ Safe fix
55 55 | # noqa: A123,B456
56 56 | # ruff: noqa: A123,B456
57 57 | # flake8: noqa: A123,B456
58    |-# noqa: A123,,B456
   58 |+# noqa: A123, B456
59 59 | # noqa: A123 , 	,	 	B456
60 60 | # noqa: A123	B456
61 61 | # noqa: A123			B456

RUF104.py:59:3: RUF104 [*] Unformatted special comment
   |
57 | # flake8: noqa: A123,B456
58 | # noqa: A123,,B456
59 | # noqa: A123 ,  ,       B456
   |   ^^^^ RUF104
60 | # noqa: A123    B456
61 | # noqa: A123            B456
   |
   = help: Format comment

ℹ Safe fix
56 56 | # ruff: noqa: A123,B456
57 57 | # flake8: noqa: A123,B456
58 58 | # noqa: A123,,B456
59    |-# noqa: A123 , 	,	 	B456
   59 |+# noqa: A123, B456
60 60 | # noqa: A123	B456
61 61 | # noqa: A123			B456
62 62 | # noqa: A123				B456

RUF104.py:60:3: RUF104 [*] Unformatted special comment
   |
58 | # noqa: A123,,B456
59 | # noqa: A123 ,  ,       B456
60 | # noqa: A123    B456
   |   ^^^^ RUF104
61 | # noqa: A123            B456
62 | # noqa: A123                B456
   |
   = help: Format comment

ℹ Safe fix
57 57 | # flake8: noqa: A123,B456
58 58 | # noqa: A123,,B456
59 59 | # noqa: A123 , 	,	 	B456
60    |-# noqa: A123	B456
   60 |+# noqa: A123, B456
61 61 | # noqa: A123			B456
62 62 | # noqa: A123				B456
63 63 | # noqa: A123 ,B456

RUF104.py:61:3: RUF104 [*] Unformatted special comment
   |
59 | # noqa: A123 ,  ,       B456
60 | # noqa: A123    B456
61 | # noqa: A123            B456
   |   ^^^^ RUF104
62 | # noqa: A123                B456
63 | # noqa: A123 ,B456
   |
   = help: Format comment

ℹ Safe fix
58 58 | # noqa: A123,,B456
59 59 | # noqa: A123 , 	,	 	B456
60 60 | # noqa: A123	B456
61    |-# noqa: A123			B456
   61 |+# noqa: A123, B456
62 62 | # noqa: A123				B456
63 63 | # noqa: A123 ,B456
64 64 | # ruff: noqa: A123	B456

RUF104.py:62:3: RUF104 [*] Unformatted special comment
   |
60 | # noqa: A123    B456
61 | # noqa: A123            B456
62 | # noqa: A123                B456
   |   ^^^^ RUF104
63 | # noqa: A123 ,B456
64 | # ruff: noqa: A123  B456
   |
   = help: Format comment

ℹ Safe fix
59 59 | # noqa: A123 , 	,	 	B456
60 60 | # noqa: A123	B456
61 61 | # noqa: A123			B456
62    |-# noqa: A123				B456
   62 |+# noqa: A123, B456
63 63 | # noqa: A123 ,B456
64 64 | # ruff: noqa: A123	B456
65 65 | # flake8: noqa: A123   B456

RUF104.py:63:3: RUF104 [*] Unformatted special comment
   |
61 | # noqa: A123            B456
62 | # noqa: A123                B456
63 | # noqa: A123 ,B456
   |   ^^^^ RUF104
64 | # ruff: noqa: A123  B456
65 | # flake8: noqa: A123   B456
   |
   = help: Format comment

ℹ Safe fix
60 60 | # noqa: A123	B456
61 61 | # noqa: A123			B456
62 62 | # noqa: A123				B456
63    |-# noqa: A123 ,B456
   63 |+# noqa: A123, B456
64 64 | # ruff: noqa: A123	B456
65 65 | # flake8: noqa: A123   B456
66 66 | 

RUF104.py:64:3: RUF104 [*] Unformatted special comment
   |
62 | # noqa: A123                B456
63 | # noqa: A123 ,B456
64 | # ruff: noqa: A123  B456
   |   ^^^^ RUF104
65 | # flake8: noqa: A123   B456
   |
   = help: Format comment

ℹ Safe fix
61 61 | # noqa: A123			B456
62 62 | # noqa: A123				B456
63 63 | # noqa: A123 ,B456
64    |-# ruff: noqa: A123	B456
   64 |+# ruff: noqa: A123, B456
65 65 | # flake8: noqa: A123   B456
66 66 | 
67 67 | 

RUF104.py:65:3: RUF104 [*] Unformatted special comment
   |
63 | # noqa: A123 ,B456
64 | # ruff: noqa: A123  B456
65 | # flake8: noqa: A123   B456
   |   ^^^^^^ RUF104
   |
   = help: Format comment

ℹ Safe fix
62 62 | # noqa: A123				B456
63 63 | # noqa: A123 ,B456
64 64 | # ruff: noqa: A123	B456
65    |-# flake8: noqa: A123   B456
   65 |+# flake8: noqa: A123, B456
66 66 | 
67 67 | 
68 68 | # type: ignore  # noqa: A123, B456

RUF104.py:70:13: RUF104 [*] Unformatted special comment
   |
68 | # type: ignore  # noqa: A123, B456
69 | 
70 | #isort:skip#noqa:A123
   |             ^^^^ RUF104
71 | 
72 | # fmt:off#   noqa: A123
   |
   = help: Format comment

ℹ Safe fix
67 67 | 
68 68 | # type: ignore  # noqa: A123, B456
69 69 | 
70    |-#isort:skip#noqa:A123
   70 |+#isort:skip# noqa: A123
71 71 | 
72 72 | # fmt:off#   noqa: A123
73 73 | 

RUF104.py:72:3: RUF104 [*] Unformatted special comment
   |
70 | #isort:skip#noqa:A123
71 | 
72 | # fmt:off#   noqa: A123
   |   ^^^ RUF104
73 | 
74 | # noqa:A123 - Lorem ipsum dolor sit amet
   |
   = help: Format comment

ℹ Safe fix
69 69 | 
70 70 | #isort:skip#noqa:A123
71 71 | 
72    |-# fmt:off#   noqa: A123
   72 |+# fmt: off#   noqa: A123
73 73 | 
74 74 | # noqa:A123 - Lorem ipsum dolor sit amet

RUF104.py:72:14: RUF104 [*] Unformatted special comment
   |
70 | #isort:skip#noqa:A123
71 | 
72 | # fmt:off#   noqa: A123
   |              ^^^^ RUF104
73 | 
74 | # noqa:A123 - Lorem ipsum dolor sit amet
   |
   = help: Format comment

ℹ Safe fix
69 69 | 
70 70 | #isort:skip#noqa:A123
71 71 | 
72    |-# fmt:off#   noqa: A123
   72 |+# fmt:off# noqa: A123
73 73 | 
74 74 | # noqa:A123 - Lorem ipsum dolor sit amet

RUF104.py:74:3: RUF104 [*] Unformatted special comment
   |
72 | # fmt:off#   noqa: A123
73 | 
74 | # noqa:A123 - Lorem ipsum dolor sit amet
   |   ^^^^ RUF104
   |
   = help: Format comment

ℹ Safe fix
71 71 | 
72 72 | # fmt:off#   noqa: A123
73 73 | 
74    |-# noqa:A123 - Lorem ipsum dolor sit amet
   74 |+# noqa: A123 - Lorem ipsum dolor sit amet
