crates/ruff_linter/src/rules/ruff/snapshots/ruff_linter__rules__ruff__tests__preview__RUF104_RUF104_1.py.snap
---
source: crates/ruff_linter/src/rules/ruff/mod.rs
snapshot_kind: text
---
RUF104_1.py:1:3: RUF104 [*] Unformatted special comment
  |
1 | # ruff:noqa
  |   ^^^^ RUF104
2 | 
3 | #noqa:A123
  |
  = help: Format comment

ℹ Safe fix
1   |-# ruff:noqa
  1 |+# ruff: noqa
2 2 | 
3 3 | #noqa:A123

RUF104_1.py:3:2: RUF104 [*] Unformatted special comment
  |
1 | # ruff:noqa
2 | 
3 | #noqa:A123
  |  ^^^^ RUF104
  |
  = help: Format comment

ℹ Safe fix
1 1 | # ruff:noqa
2 2 | 
3   |-#noqa:A123
  3 |+# noqa: A123
