crates/ruff_linter/src/rules/ruff/snapshots/ruff_linter__rules__ruff__tests__preview__RUF104_RUF104_empty_suppressions.py.snap
---
source: crates/ruff_linter/src/rules/ruff/mod.rs
snapshot_kind: text
---
RUF104_empty_suppressions.py:5:2: RUF104 [*] Unformatted special comment
  |
3 | ###
4 | 
5 | #noqa:
  |  ^^^^ RUF104
6 | #ruff:noqa:
7 | #flake8:noqa:
  |
  = help: Format comment

ℹ Safe fix
2 2 | # All of these should be reformatted.
3 3 | ###
4 4 | 
5   |-#noqa:
  5 |+# noqa:
6 6 | #ruff:noqa:
7 7 | #flake8:noqa:

RUF104_empty_suppressions.py:6:2: RUF104 [*] Unformatted special comment
  |
5 | #noqa:
6 | #ruff:noqa:
  |  ^^^^ RUF104
7 | #flake8:noqa:
  |
  = help: Format comment

ℹ Safe fix
3 3 | ###
4 4 | 
5 5 | #noqa:
6   |-#ruff:noqa:
  6 |+# ruff: noqa:
7 7 | #flake8:noqa:

RUF104_empty_suppressions.py:7:2: RUF104 [*] Unformatted special comment
  |
5 | #noqa:
6 | #ruff:noqa:
7 | #flake8:noqa:
  |  ^^^^^^ RUF104
  |
  = help: Format comment

ℹ Safe fix
4 4 | 
5 5 | #noqa:
6 6 | #ruff:noqa:
7   |-#flake8:noqa:
  7 |+# flake8: noqa:
