crates/ruff_linter/src/rules/ruff/snapshots/ruff_linter__rules__ruff__tests__preview__RUF104_RUF104_implicit_suppression.py.snap
---
source: crates/ruff_linter/src/rules/ruff/mod.rs
snapshot_kind: text
---
RUF104_implicit_suppression.py:6:3: RUF104 [*] Unformatted special comment
  |
4 | ###
5 | 
6 | # ruff:noqa
  |   ^^^^ RUF104
7 | 
8 | #noqa:A123
  |
  = help: Format comment

ℹ Safe fix
3 3 | # as it is not explicitly suppressed.
4 4 | ###
5 5 | 
6   |-# ruff:noqa
  6 |+# ruff: noqa
7 7 | 
8 8 | #noqa:A123

RUF104_implicit_suppression.py:8:2: RUF104 [*] Unformatted special comment
  |
6 | # ruff:noqa
7 | 
8 | #noqa:A123
  |  ^^^^ RUF104
  |
  = help: Format comment

ℹ Safe fix
5 5 | 
6 6 | # ruff:noqa
7 7 | 
8   |-#noqa:A123
  8 |+# noqa: A123
