crates/ruff_linter/src/rules/ruff/snapshots/ruff_linter__rules__ruff__tests__preview__context-manager-generator_RUF079_version.py.snap
---
source: crates/ruff_linter/src/rules/ruff/mod.rs
---
RUF079 [*] Use `Generator` instead of `Iterator` for a context manager
 --> RUF079_version.py:7:18
  |
6 | @contextmanager
7 | def context() -> Iterator[int]:
  |                  ^^^^^^^^^^^^^
8 |     yield 1
  |
help: Replace with `Generator`
  |
6 | @contextmanager
  - def context() -> Iterator[int]:
7 + def context() -> Generator[int, None, None]:
8 |     yield 1
  |
note: This is an unsafe fix and may change runtime behavior
